# vision-camera-face-detector-v2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-vision-camera-face-detector.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/cmake/: CMakeLists.txt  apply_patch.sh
android/src/main/java/com/visioncamerafacedetector/: FaceDetectorView.java  FaceDetectorViewManager.java  VisionCameraFaceDetectorModule.java  VisionCameraFaceDetectorPackage.java
android/src/newarch/: VisionCameraFaceDetectorSpec.java
android/src/oldarch/: VisionCameraFaceDetectorSpec.java
cpp/: EGLContextHandler.cpp  EGLContextHandler.h  FaceDetectorView.cpp  FaceDetectorView.h  Global.cpp  Global.h  JSurface.h  JSurfaceHolder.cpp  JSurfaceHolder.h  JSurfaceView.cpp  JSurfaceView.h  JniOnLoad.cpp  react-native-vision-camera-face-detector.cpp  react-native-vision-camera-face-detector.h  react_native_rcore.cpp  react_native_rcore.h
example/: package.json
example/android/app/: build.gradle
example/android/app/src/main/java/com/visioncamerafacedetectorexample/: MainApplication.kt
example/ios/: Podfile
example/ios/VisionCameraFaceDetectorExample/: AppDelegate.mm  Info.plist
example/ios/VisionCameraFaceDetectorExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: VisionCameraFaceDetector.h  VisionCameraFaceDetector.mm
src/: NativeVisionCameraFaceDetector.ts  index.ts  index.tsx  nativeSetup.tsx
